--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
         "react-scripts": "5.0.1",
         "react-select": "^5.4.0",
         "react-toastify": "^9.1.1",
+        "sass": "^1.57.1",
         "web-vitals": "^2.1.4",
         "yup": "^0.32.11"
     },
