--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.1.3",
         "bootstrap": "^5.3.0-alpha1",
+        "bootstrap-icons": "^1.10.3",
         "lodash": "^4.17.15",
         "nanoid": "^4.0.0",
         "prop-types": "^15.8.1",
