--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
 		"express": "^4.18.2",
 		"express-validator": "^6.14.2",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.8.0"
+		"mongoose": "^6.8.0",
+		"multer": "^1.4.5-lts.1"
 	},
 	"devDependencies": {
 		"cross-env": "^7.0.3",
