--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-brands-svg-icons": "^6.2.1",
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
@@ -12,6 +13,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.1.3",
+        "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^5.3.0-alpha1",
         "bootstrap-icons": "^1.10.3",
         "lodash": "^4.17.15",
